--- a/index.css
+++ b/index.css
@@ -1,9 +1,68 @@
+@font-face {
+  font-family: Kiona;
+  src: url("kiona-regular-webfont.woff");
+}
+
 body {
   margin: 0 auto;
 }
 
-#nav_bar {
+#nav_bar_outer {
+  width: 100%;
+  height: 12vh;
+  margin: 0 auto;
+  position: fixed;
+}
+
+#nav_bar_inner {
+  position: relative;
   width: auto;
-  height: 50px;
-  background-color: red;
+  height: 6vh;
+  margin: 0 6vw;
+  top: 6vh;
+}
+
+#nav_bar_inner img {
+  height: inherit;
+}
+
+#nav_bar_inner ul {
+  list-style-type: none;
+  margin: 2vh 4vw 0 auto;
+  float: right;
+}
+
+#nav_bar_inner li {
+  display: inline;
+  color: white;
+  font-family: Kiona;
+  font-size: 15px;
+  margin: 0 2vw 0 0;
+}
+
+#welcome_page {
+  width: 100%;
+  height: 900px;
+  background-image: url("welcome_background.jpg");
+  background-repeat: no-repeat;
+  background-position: 50% 60%;
+  background-size: cover;
+}
+
+#code_works {
+  width: auto;
+  height: 500px;
+  background-color: blue;
+}
+
+#galleria {
+  width: auto;
+  height: 500px;
+  background-color: aqua;
+}
+
+#about_me {
+  width: auto;
+  height: 500px;
+  background-color: aquamarine;
 }
