--- a/index.css
+++ b/index.css
@@ -45,7 +45,7 @@ h4 {
 
 #nav_bar_inner p {
   font-family: Kiona;
-  color: black;
+  color: #000000;
   display: inline;
   margin: 0 4vw 2vh auto;
   font-size: 20px;
@@ -59,7 +59,7 @@ h4 {
 
 #nav_bar_inner li {
   display: inline;
-  color: black;
+  color: #000000;
   font-family: Kiona;
   font-size: 15px;
   margin: 0 2vw 0 0;
@@ -70,37 +70,56 @@ h4 {
   height: 100vh;
   background-color: #d4d3be;
   margin: 0 auto;
+  display: inline-block;
+}
+
+#right {
+  margin: 0 auto;
+  position: relative;
+  top: 30%;
+  left: 10%;
+}
+
+#content {
+  margin: 0 auto;
+  position: relative;
+  top: 33vh;
+  display: grid;
+  grid-template-columns: auto auto;
+  height: 250px;
+  width: fit-content;
+}
+
+#name_popup {
+  display: none;
 }
 
 #welcome_page h1,
-h3 {
-  color: black;
+#welcome_page h3 {
+  color: #000000;
   font-family: Kiona;
   margin: 0 auto;
   text-align: center;
+  width: auto;
 }
 
 #welcome_page h1 {
-  display: inline-block;
-  margin-top: 16%;
-  margin-left: 27%;
-  font-size: 50px;
+  font-size: 55px;
 }
 
 #welcome_page h3 {
-  margin-top: 0.5%;
-  display: inline-block;
-  margin-left: 32%;
-  font-size: 22px;
+  font-size: 25px;
 }
 
 #circle {
   margin: 0 auto;
-  width: 200px;
-  height: 200px;
-  background-color: white;
+  width: 250px;
+  height: 250px;
+  background-image: url("assets/welcome_mini_dave.jpg");
+  background-size: cover;
+  background-position: -50px center;
   border-radius: 50%;
-  margin-top: 5%;
+  display: inline-block;
 }
 
 #welcome_page p {
@@ -120,7 +139,7 @@ h3 {
 }
 
 #code_works h1 {
-  color: white;
+  color: #000000;
   font-family: Kiona;
   font-size: 45px;
   margin: 0 auto;
@@ -130,7 +149,7 @@ h3 {
 
 #code_works #langs {
   font-family: Quicksand-Book;
-  color: #ffffff;
+  color: #000000;
   text-align: center;
   margin: 50px;
 }
@@ -203,7 +222,7 @@ h3 {
 }
 
 #galleria h1 {
-  color: white;
+  color: #000000;
   font-family: Kiona;
   font-size: 45px;
   margin: 0 auto;
