--- a/index.css
+++ b/index.css
@@ -62,7 +62,30 @@ h4 {
   color: #000000;
   font-family: Kiona;
   font-size: 15px;
-  margin: 0 2vw 0 0;
+  margin: 0 1vw 0 0;
+}
+
+#nav_bar_inner a {
+  text-decoration: none;
+  color: #000000;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+#nav_bar_inner a:link {
+  color: #000000;
+}
+
+#nav_bar_inner a:visited {
+  color: #000000;
+}
+
+#nav_bar_inner a:hover {
+  background-color: #ffffff;
+}
+
+#nav_bar_inner a:active {
+  color: red;
 }
 
 #welcome_page {
@@ -336,4 +359,8 @@ h4 {
 
 #contact_me li {
   display: inline;
+}
+
+a {
+  text-decoration: none;
 }
