--- a/index.css
+++ b/index.css
@@ -29,6 +29,7 @@ h4 {
   height: 12vh;
   margin: 0 auto;
   position: fixed;
+  z-index: 1;
 }
 
 #nav_bar_inner {
@@ -80,12 +81,9 @@ h4 {
   color: #000000;
 }
 
-#nav_bar_inner a:hover {
+#nav_bar_inner a:hover,
+#nav_bar_inner a.active {
   background-color: #ffffff;
-}
-
-#nav_bar_inner a:active {
-  color: red;
 }
 
 #welcome_page {
