--- a/index.css
+++ b/index.css
@@ -30,6 +30,9 @@ h4 {
   margin: 0 auto;
   z-index: 1;
   background-color: #d4d3be;
+  transition-duration: 300ms;
+  transition-property: height, background, position;
+  transition-timing-function: ease-in-out;
 }
 
 .fixed-header {
@@ -39,6 +42,9 @@ h4 {
   height: 9vh;
   margin: 0 auto;
   z-index: 1;
+  transition-duration: 500ms;
+  transition-property: height, background, position;
+  transition-timing-function: ease-in-out;
 }
 
 .nav_on_top #nav_bar_inner {
@@ -129,6 +135,9 @@ h4 {
   color: #000000;
   padding: 10px;
   border-radius: 5px;
+  transition-duration: 350ms;
+  transition-property: background;
+  transition-timing-function: ease-in-out;
 }
 
 .fixed-header #nav_bar_inner a {
@@ -136,6 +145,9 @@ h4 {
   color: #ffffff;
   padding: 10px;
   border-radius: 5px;
+  transition-duration: 350ms;
+  transition-property: background;
+  transition-timing-function: ease-in-out;
 }
 
 .nav_on_top #nav_bar_inner a:link {
@@ -297,6 +309,9 @@ h4 {
   width: 50%;
   padding: 7px;
   border-radius: 5px;
+  transition-duration: 350ms;
+  transition-property: color, background;
+  transition-timing-function: ease-in-out;
 }
 
 #code_works #projects p {
@@ -305,6 +320,9 @@ h4 {
   font-size: 15px;
   text-align: center;
   font-family: Quicksand-Book;
+  transition-duration: 350ms;
+  transition-property: color;
+  transition-timing-function: ease-in-out;
 }
 
 #code_works #top,
@@ -324,6 +342,9 @@ h4 {
   margin-bottom: 30px;
   flex: 1;
   position: relative;
+  transition-duration: 350ms;
+  transition-property: background;
+  transition-timing-function: ease-in-out;
 }
 
 #galleria {
@@ -373,11 +394,18 @@ h4 {
 }
 
 #galleria #box h2 {
-  display: none;
+  display: block;
+  position: absolute;
+  opacity: 0;
+  height: 0;
+  overflow: hidden;
+  transition-duration: 250ms;
+  transition-property: opacity, height;
+  transition-timing-function: ease-in-out;
 }
 
 #galleria #box:hover h2 {
-  display: block;
+  opacity: 1;
   margin: 0 auto;
   padding: 20px;
   font-family: Kiona;
