--- a/index.css
+++ b/index.css
@@ -13,6 +13,10 @@
   src: url("/assets/fonts/quicksand_bold-webfont.woff");
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   margin: 0 auto;
 }
