--- a/index.css
+++ b/index.css
@@ -58,6 +58,9 @@ h4 {
   height: 6vh;
   margin: 0 6vw;
   top: 6vh;
+  display: flex;
+  flex-flow: row;
+  justify-content: flex-end;
 }
 
 .fixed-header #nav_bar_inner {
@@ -66,19 +69,23 @@ h4 {
   height: 6vh;
   margin: 0 6vw;
   top: 1.5vh;
+  display: flex;
+  flex-flow: row;
+  justify-content: flex-end;
 }
 
 .nav_on_top #nav_bar_inner svg {
   margin: 0 auto;
   width: auto;
   height: 6vh;
+  margin-right: 10px;
 }
 
 .fixed-header svg {
   margin: 0 auto;
-  position: absolute;
   width: 20px;
   height: 49px;
+  margin-right: 10px;
 }
 
 .fixed-header svg path {
@@ -86,37 +93,41 @@ h4 {
 }
 
 .nav_on_top #nav_bar_inner p {
-  margin: 0 auto;
+  margin: auto;
   font-family: Kiona;
   color: #000000;
   display: inline;
   font-size: 20px;
-  position: absolute;
-  top: 30%;
-  left: 3%;
+  flex: 1;
+  transition-duration: 300ms;
+  transition-property: font-size;
+  transition-timing-function: ease-in-out;
 }
 
 .fixed-header #nav_bar_inner p {
   font-family: Kiona;
   color: #ffffff;
-  margin: 0 auto;
+  margin: auto;
   display: inline;
-  font-size: 18px;
-  position: absolute;
-  top: 34%;
-  left: 2.25%;
+  font-size: 16px;
+  flex: 1;
+  transition-duration: 300ms;
+  transition-property: font-size;
+  transition-timing-function: ease-in-out;
 }
 
 .nav_on_top #nav_bar_inner ul {
   list-style-type: none;
-  margin: 2vh 4vw 0 auto;
-  float: right;
+  margin: auto;
+  display: flex;
+  flex-flow: row wrap;
 }
 
 .fixed-header #nav_bar_inner ul {
   list-style-type: none;
-  margin: 2vh 4vw 0 auto;
-  float: right;
+  margin: auto;
+  display: flex;
+  flex-flow: row wrap;
 }
 
 .nav_on_top #nav_bar_inner li {
@@ -124,7 +135,6 @@ h4 {
   color: #000000;
   font-family: Kiona;
   font-size: 15px;
-  margin: 0 1vw 0 0;
 }
 
 .fixed-header #nav_bar_inner li {
@@ -132,7 +142,6 @@ h4 {
   color: #ffffff;
   font-family: Kiona;
   font-size: 15px;
-  margin: 0 1vw 0 0;
 }
 
 .nav_on_top #nav_bar_inner a {
@@ -141,7 +150,7 @@ h4 {
   padding: 10px;
   border-radius: 5px;
   transition-duration: 350ms;
-  transition-property: background;
+  transition-property: background, font-size;
   transition-timing-function: ease-in-out;
 }
 
@@ -151,7 +160,7 @@ h4 {
   padding: 10px;
   border-radius: 5px;
   transition-duration: 350ms;
-  transition-property: background;
+  transition-property: background, font-size;
   transition-timing-function: ease-in-out;
 }
 
@@ -272,10 +281,14 @@ h4 {
 }
 
 #code_works #projects {
-  margin: 0 auto;
   padding-bottom: 30px;
-  width: auto;
-  flex: 3;
+  width: 70%;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-auto-rows: 1fr;
+  grid-column-gap: 30px;
+  grid-row-gap: 30px;
 }
 
 #code_works a {
@@ -300,12 +313,12 @@ h4 {
 #code_works #projects h4 {
   margin: 0 auto;
   margin-top: 30px;
-  font-size: 20px;
+  font-size: 18px;
   text-align: center;
   font-family: Kiona;
   color: #ffffff;
   background-color: #1b3d2f;
-  width: 50%;
+
   padding: 7px;
   border-radius: 5px;
   transition-duration: 350ms;
@@ -324,26 +337,14 @@ h4 {
   transition-timing-function: ease-in-out;
 }
 
-#code_works #top,
-#code_works #bottom {
-  width: 70%;
-  margin: 0 auto;
-  display: flex;
-}
-
 #code_works #box {
   background-color: white;
   border-radius: 15px;
-  width: auto;
-  height: 261px;
-  margin-top: auto;
-  margin-right: 30px;
-  margin-bottom: 30px;
-  flex: 1;
-  position: relative;
   transition-duration: 350ms;
   transition-property: background;
   transition-timing-function: ease-in-out;
+  display: flex;
+  flex-direction: column;
 }
 
 #galleria {
@@ -380,41 +381,36 @@ h4 {
   font-family: Kiona;
 }
 
-/* #galleria #top,
-#galleria #bottom,
-#galleria #middle {
-  margin: 0 auto;
-} */
-
 #galleria #box,
 .box1 {
   margin: 0 auto;
   margin: 0 10px 10px 0;
-  width: 96%;
+  position: relative;
 }
 
-#galleria #box h2 {
+#galleria #projects #box h2 {
   display: block;
   position: absolute;
   opacity: 0;
   height: 0;
   overflow: hidden;
+  font-family: Kiona;
+  font-size: 1.5vw;
+  color: #ffffff;
+  text-align: center;
+  bottom: 0px;
+  border-radius: 5px;
+  padding: 1.25vw;
+  width: auto;
+  background-color: rgba(0, 0, 0, 0.7);
   transition-duration: 250ms;
-  transition-property: opacity, height;
+  transition-property: opacity, height, background;
   transition-timing-function: ease-in-out;
 }
 
-#galleria #box:hover h2 {
+#galleria #projects #box:hover h2 {
   opacity: 1;
-  margin: 0 auto;
-  padding: 20px;
-  font-family: Kiona;
-  color: #ffffff;
-  background-color: rgba(0, 0, 0, 0.7);
-  text-align: center;
-  position: absolute;
-  bottom: 0px;
-  border-radius: 5px;
+  height: auto;
 }
 
 #galleria img {
@@ -491,7 +487,21 @@ a {
   text-decoration: none;
 }
 
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 800px) {
+  #nav_bar_inner li a {
+    font-size: 12px;
+  }
+
+  .nav_on_top #nav_bar_inner p {
+    font-size: 15px;
+  }
+
+  .fixed-header #nav_bar_inner p {
+    font-size: 14px;
+  }
+}
+
+@media screen and (max-width: 1400px) {
   #welcome_page h1 {
     font-size: 40px;
   }
@@ -507,23 +517,28 @@ a {
     font-size: 15px;
   }
 
-  #code_works #top,
-  #code_works #bottom {
-    width: 60%;
-    margin: 0 auto;
-    display: block;
-  }
   #code_works {
     padding-top: 20px;
   }
 
+  #code_works #projects {
+    display: flex;
+    flex-direction: column;
+  }
+
   #code_works #box {
-    height: auto;
-    padding-top: 20px;
+    width: 100%;
+    padding: 20px;
   }
 
   #code_works #box h4 {
-    margin: 0 auto;
-    font-size: 17px;
+    margin: auto;
+    font-size: 14px;
+  }
+
+  #code_works #box p {
+    font-size: 12px;
+    padding: 0;
+    padding-top: 20px;
   }
 }
