--- a/index.css
+++ b/index.css
@@ -149,6 +149,7 @@ h4 {
   color: #000000;
   padding: 10px;
   border-radius: 5px;
+  margin: 3px;
   transition-duration: 350ms;
   transition-property: background, font-size;
   transition-timing-function: ease-in-out;
@@ -158,6 +159,7 @@ h4 {
   text-decoration: none;
   color: #ffffff;
   padding: 10px;
+  margin: 3px;
   border-radius: 5px;
   transition-duration: 350ms;
   transition-property: background, font-size;
@@ -259,7 +261,7 @@ h4 {
   margin: 0 auto;
   padding-bottom: 20px;
   display: flex;
-  flex-flow: column wrap; /* So put it into a column if possible else wrap it into a row*/
+  flex-flow: column; /* So put it into a column if possible else wrap it into a row*/
 }
 
 #code_works h1 {
@@ -352,19 +354,22 @@ h4 {
   height: auto;
   background-color: #829c90;
   margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 #galleria h1 {
   color: #000000;
   font-family: Kiona;
-  font-size: 3vw;
+  font-size: 45px;
   margin: 0 auto;
-  margin-left: 37%;
+  flex: 2;
   padding-top: 5%;
 }
 
 #galleria #projects {
-  margin: 0 auto;
+  margin: auto;
   margin-top: 4%;
   padding-bottom: 5%;
   margin-left: 8%;
@@ -395,12 +400,12 @@ h4 {
   height: 0;
   overflow: hidden;
   font-family: Kiona;
-  font-size: 1.5vw;
+  font-size: 135%;
   color: #ffffff;
   text-align: center;
   bottom: 0px;
   border-radius: 5px;
-  padding: 1.25vw;
+  padding: 6%;
   width: auto;
   background-color: rgba(0, 0, 0, 0.7);
   transition-duration: 250ms;
@@ -427,8 +432,7 @@ h4 {
 }
 
 #contact_me {
-  width: 100%;
-  height: auto;
+  height: fit-content;
   margin: 0 auto;
   display: flex;
   text-align: center;
@@ -441,7 +445,7 @@ h4 {
   background-color: #ffffff;
   width: fit-content;
   border-radius: 5px;
-  font-size: 1.6vw;
+  font-size: 135%;
 }
 
 #contact_me p {
@@ -449,7 +453,8 @@ h4 {
   width: 70%;
   text-align: center;
   font-family: Quicksand-Book;
-  font-size: 1.05vw;
+  font-size: 100%;
+  padding-bottom: 20px;
 }
 
 #contact_me #about_me {
@@ -458,7 +463,6 @@ h4 {
   margin: 0 auto;
   flex: 1;
   background-color: #b3d9d9;
-  padding-bottom: 20px;
 }
 
 #contact_me #links {
@@ -467,7 +471,6 @@ h4 {
   margin: 0 auto;
   flex: 1;
   background-color: #7ab5b5;
-  padding-bottom: 20px;
 }
 
 #contact_me img {
@@ -509,16 +512,16 @@ a {
     font-size: 15px;
   }
 
+  #code_works {
+    padding-top: 20px;
+  }
+
   #code_works h1 {
     font-size: 30px;
   }
 
   #code_works #langs {
     font-size: 15px;
-  }
-
-  #code_works {
-    padding-top: 20px;
   }
 
   #code_works #projects {
@@ -540,5 +543,55 @@ a {
     font-size: 12px;
     padding: 0;
     padding-top: 20px;
+  }
+
+  #galleria h1 {
+    font-size: 30px;
+    text-align: center;
+  }
+
+  #galleria #projects {
+    display: flex;
+    flex-direction: column;
+    width: 70%;
+    justify-content: center;
+    align-items: center;
+    margin-right: auto;
+    margin-left: auto;
+  }
+
+  #galleria .box1 {
+    width: 50%;
+    height: auto;
+  }
+
+  #galleria #projects #box h2 {
+    padding: 4%;
+    font-size: 120%;
+  }
+
+  #galleria #projects .box1 h2 {
+    padding: 7% !important;
+  }
+
+  #contact_me {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    margin: 0 auto;
+  }
+
+  #about_me,
+  #links {
+    width: 100vw !important;
+    padding-bottom: 2vh;
+  }
+
+  #contact_me h2 {
+    font-size: 100%;
+  }
+
+  #contact_me p {
+    font-size: 90%;
   }
 }
