--- a/index.css
+++ b/index.css
@@ -52,26 +52,23 @@ h4 {
   transition-timing-function: ease-in-out;
 }
 
-.nav_on_top #nav_bar_inner {
-  position: relative;
-  width: auto;
-  height: 6vh;
-  margin: 0 6vw;
-  top: 6vh;
-  display: flex;
-  flex-flow: row;
-  justify-content: flex-end;
-}
-
+.nav_on_top #nav_bar_inner,
 .fixed-header #nav_bar_inner {
   position: relative;
   width: auto;
   height: 6vh;
   margin: 0 6vw;
-  top: 1.5vh;
   display: flex;
   flex-flow: row;
   justify-content: flex-end;
+}
+
+.nav_on_top #nav_bar_inner {
+  top: 6vh;
+}
+
+.fixed-header #nav_bar_inner {
+  top: 1.5vh;
 }
 
 .nav_on_top #nav_bar_inner svg {
@@ -92,37 +89,26 @@ h4 {
   fill: #ffffff;
 }
 
-.nav_on_top #nav_bar_inner p {
+.nav_on_top #nav_bar_inner p,
+.fixed-header #nav_bar_inner p {
   margin: auto;
   font-family: Kiona;
-  color: #000000;
   display: inline;
-  font-size: 20px;
   flex: 1;
-  transition-duration: 300ms;
-  transition-property: font-size;
-  transition-timing-function: ease-in-out;
+  transition: font-size 300ms ease-in-out;
+}
+
+.nav_on_top #nav_bar_inner p {
+  color: #000000;
+  font-size: 20px;
 }
 
 .fixed-header #nav_bar_inner p {
-  font-family: Kiona;
   color: #ffffff;
-  margin: auto;
-  display: inline;
   font-size: 16px;
-  flex: 1;
-  transition-duration: 300ms;
-  transition-property: font-size;
-  transition-timing-function: ease-in-out;
 }
 
-.nav_on_top #nav_bar_inner ul {
-  list-style-type: none;
-  margin: auto;
-  display: flex;
-  flex-flow: row wrap;
-}
-
+.nav_on_top #nav_bar_inner ul,
 .fixed-header #nav_bar_inner ul {
   list-style-type: none;
   margin: auto;
@@ -130,46 +116,32 @@ h4 {
   flex-flow: row wrap;
 }
 
-.nav_on_top #nav_bar_inner li {
+.nav_on_top #nav_bar_inner li,
+.fixed-header #nav_bar_inner li {
   display: inline;
-  color: #000000;
   font-family: Kiona;
   font-size: 15px;
+}
+
+.nav_on_top #nav_bar_inner li {
+  color: #000000;
 }
 
 .fixed-header #nav_bar_inner li {
-  display: inline;
   color: #ffffff;
-  font-family: Kiona;
-  font-size: 15px;
 }
 
-.nav_on_top #nav_bar_inner a {
-  text-decoration: none;
-  color: #000000;
-  padding: 10px;
-  border-radius: 5px;
-  margin: 3px;
-  transition-duration: 350ms;
-  transition-property: background, font-size;
-  transition-timing-function: ease-in-out;
-}
-
+.nav_on_top #nav_bar_inner a,
 .fixed-header #nav_bar_inner a {
   text-decoration: none;
-  color: #ffffff;
   padding: 10px;
-  margin: 3px;
   border-radius: 5px;
-  transition-duration: 350ms;
-  transition-property: background, font-size;
-  transition-timing-function: ease-in-out;
+  margin: 3px;
+  transition: background 350ms ease-in-out, font-size 350ms ease-in-out;
 }
 
-.nav_on_top #nav_bar_inner a:link {
-  color: #000000;
-}
-
+.nav_on_top #nav_bar_inner a,
+.nav_on_top #nav_bar_inner a:link,
 .nav_on_top #nav_bar_inner a:visited {
   color: #000000;
 }
@@ -179,10 +151,8 @@ h4 {
   background-color: #ffffff;
 }
 
-.fixed-header #nav_bar_inner a:link {
-  color: #ffffff;
-}
-
+.fixed-header #nav_bar_inner a,
+.fixed-header #nav_bar_inner a:link,
 .fixed-header #nav_bar_inner a:visited {
   color: #ffffff;
 }
@@ -432,7 +402,7 @@ h4 {
 }
 
 #contact_me {
-  height: fit-content;
+  height: 100%;
   margin: 0 auto;
   display: flex;
   text-align: center;
@@ -488,58 +458,6 @@ h4 {
 
 a {
   text-decoration: none;
-}
-
-@media screen and (max-width: 400px) {
-  nav {
-    height: auto;
-    padding-bottom: 15px;
-  }
-
-  .fixed-header {
-    padding-bottom: 5px;
-    padding-top: 15px;
-  }
-
-  .nav_on_top #nav_bar_inner ul,
-  .fixed-header #nav_bar_inner ul {
-    margin-top: 0 !important;
-    padding-top: 0 !;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .fixed-header #nav_bar_inner a,
-  .nav_on_top #nav_bar_inner a {
-    padding: 5px !important;
-  }
-
-  .fixed-header #nav_bar_inner li,
-  .nav_on_top #nav_bar_inner li {
-    margin: 1px !important;
-  }
-}
-
-@media screen and (max-width: 800px) {
-  #nav_bar_inner li a {
-    font-size: 12px;
-  }
-
-  .nav_on_top #nav_bar_inner p,
-  .fixed-header #nav_bar_inner p {
-    font-size: 15px;
-  }
-
-  .fixed-header #nav_bar_inner a,
-  .nav_on_top #nav_bar_inner a {
-    padding: 7px;
-  }
-
-  #welcome_page {
-    margin-top: -4px;
-  }
 }
 
 @media screen and (max-width: 1400px) {
@@ -635,5 +553,57 @@ a {
 
   #contact_me p {
     font-size: 90%;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  #nav_bar_inner li a {
+    font-size: 12px;
+  }
+
+  .nav_on_top #nav_bar_inner p,
+  .fixed-header #nav_bar_inner p {
+    font-size: 15px;
+  }
+
+  .fixed-header #nav_bar_inner a,
+  .nav_on_top #nav_bar_inner a {
+    padding: 7px;
+  }
+
+  #welcome_page {
+    margin-top: -4px;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  nav {
+    height: auto;
+    padding-bottom: 15px;
+  }
+
+  .fixed-header {
+    padding-bottom: 5px;
+    padding-top: 15px;
+  }
+
+  .nav_on_top #nav_bar_inner ul,
+  .fixed-header #nav_bar_inner ul {
+    margin-top: 0 !important;
+    padding-top: 0 !;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .fixed-header #nav_bar_inner a,
+  .nav_on_top #nav_bar_inner a {
+    padding: 5px !important;
+  }
+
+  .fixed-header #nav_bar_inner li,
+  .nav_on_top #nav_bar_inner li {
+    margin: 1px !important;
   }
 }
