--- a/index.css
+++ b/index.css
@@ -83,7 +83,7 @@ h4 {
 .fixed-header svg {
   margin: 0 auto;
   width: 20px;
-  height: 49px;
+  height: 50px;
   margin-right: 10px;
   stroke:white;
   stroke-width: 1;
@@ -694,6 +694,53 @@ a {
   text-decoration: none;
 }
 
+footer {
+  background-color: #1b3d2f;
+  width: 100%;
+  height: fit-content;
+
+}
+
+footer p {
+  font-family: 'Quicksand-Book';
+  text-align: center;
+  color: white;
+  padding-top: 7px;
+}
+
+#icon_attr {
+  margin: 0 auto;
+  width: fit-content;
+}
+
+footer a,
+footer a:link,
+footer a:visited {
+  color: #B3D9D9;
+}
+
+footer a:hover,
+footer a.active {
+  color: #7AB5B5;
+}
+
+footer img {
+  height: 3vh;
+  width: auto;
+  margin: 5px;
+
+}
+
+footer svg {
+  height: 3vh;
+  width: auto;
+  margin: 5px;
+
+}
+
+footer svg path {
+  fill: black;
+}
 /* @media screen and (max-width: 1400px) {
   #welcome_page h1 {
     font-size: 40px;
